[package]
name = "sqlx-page"
version = "0.5.0"
edition = "2021"

[dependencies]
sqlx = { version = "~0.5, <0.6", default-features = false }

[features]
default = ["runtime-tokio-native-tls", "postgres"]

# These are features from crate sqlx
postgres = ["sqlx/postgres"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]