[package]
name = "sqlx-page"
description = "Cursor based pagination for SQLx with Postgres"
version = "0.8.0"
authors = ["Incomplete <incomplete@aixon.co>"]
homepage = "https://github.com/qwfy/sqlx-page"
repository = "https://github.com/qwfy/sqlx-page.git"
license = "MIT"
edition = "2021"

[dependencies]
sqlx = { version = ">=0.8.0", default-features = false, features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }